// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";

import "mydomain.proto";

package com.example;

option go_package = "$packageInPathFormat";
option java_outer_classname = "MyEventSourcedEntity";

message GetStateCommand {
    string thing_id = 1 [(akkaserverless.field).entity_key = true];
}

service MyServiceEventSourcedEntity {
    rpc SetData(Thing) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/event_sourced/things/{thing_id}"
            body: "*"
        };    
    }
    rpc GetData(GetStateCommand) returns (Data) {
        option (google.api.http) = {
            get: "/event_sourced/things/{thing_id}"
        };    

    }
}
